[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features=["jpeg"] }
bevy-inspector-egui = "0.18.3"
bevy_flycam = "*"
bevy-inspector-egui-rapier = "*"
# bevy_rapier3d = { version = "*", features = [ "simd-stable", "wasm-bindgen", "debug-render-3d", "parallel" ] }
bevy_editor_pls = "^0.4"

console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

